# core

./: .dockerignore  .gitignore  ADVERSARIAL_SECURITY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_INFO.md  BFT_VERIFICATION_PROGRESS.md  BUG_BOUNTY.md  CLAUDE.md  COHERENCE_REVIEW.md  COMPREHENSIVE_SECURITY_REVIEW.md  CONSENSUS_SPEC.md  CONTRIBUTING.md  Cargo.toml  DAG_BFT_VERIFICATION_COMPLETE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.mainnet  ESP32_ARDUINO_GUIDE.md  ESP32_DEPLOYMENT.md  FINAL_AUDIT_COMPLETE.md  FINAL_HIGH_THROUGHPUT_SUMMARY.md  FINAL_SECURITY_AUDIT_RESULTS.md  FINAL_VERDICT_DAG_BFT.md  GOVERNANCE_SECURITY_AUDIT.md  HIGH_THROUGHPUT_ANALYSIS.md  LICENSE  PERFORMANCE_ANALYSIS.md  PRE_LAUNCH_REPORT.md  PRODUCTION_AUDIT.md  PRODUCTION_CONFIG.md  PRODUCTION_READINESS_REPORT.md  PROJECT_HEALTH_REPORT.md  PROJECT_RATING.md  README.md  SECURITY.md  SECURITY_FIXES_APPLIED.md  SECURITY_VULNERABILITY_REPORT.md  SMARTOP_VULNERABILITY_BLOG_POST.md  STANDARD_NAV.md  (+33 more)
.cargo/: config.toml
.understand-anything/: .understandignore  knowledge-graph.json
archive/: Dockerfile.release
bridge/: .env.example  BRIDGE_COMPARISON.md  DEPLOYMENT_GUIDE.md  README.md  RELAYER_GUIDE.md  RELAYER_OPERATOR_SETUP.md  VALIDATOR_FEDERATION_BRIDGE.md  deploy-presale.sh  foundry.toml
config/: mainnet-validators.txt  testnet-validators.txt
crates/ultradag-coin/: Cargo.toml
crates/ultradag-coin/examples/: mainnet_keygen.rs
crates/ultradag-coin/fuzz/: Cargo.toml
crates/ultradag-coin/fuzz/fuzz_targets/: fuzz_checkpoint_decode.rs  fuzz_message_decode.rs  fuzz_state_snapshot_decode.rs  fuzz_transaction_decode.rs  fuzz_vertex_decode.rs
crates/ultradag-coin/src/: constants.rs  error.rs  lib.rs  persistence.rs
crates/ultradag-coin/src/address/: keys.rs  mod.rs
crates/ultradag-coin/src/block/: block.rs  core.rs  genesis.rs  header.rs  mod.rs
crates/ultradag-coin/src/block_producer/: mod.rs  producer.rs
crates/ultradag-coin/src/bridge/: mod.rs
crates/ultradag-coin/src/consensus/: checkpoint.rs  dag.rs  epoch.rs  finality.rs  mod.rs  ordering.rs  persistence.rs  validator_set.rs  vertex.rs
crates/ultradag-coin/src/governance/: council.rs  mod.rs  params.rs  proposals.rs  transactions.rs
crates/ultradag-coin/src/persistence/: monotonicity.rs  wal.rs
crates/ultradag-coin/src/safety/: circuit_breaker.rs
crates/ultradag-coin/src/state/: db.rs  engine.rs  mod.rs  persistence.rs
crates/ultradag-coin/src/tx/: bridge.rs  delegate.rs  mod.rs  name_registry.rs  persistence.rs  pool.rs  smart_account.rs  stake.rs  stream.rs  transaction.rs
crates/ultradag-coin/tests/: adaptive_quorum.rs  additional_coverage.rs  address.rs  address_tests.rs  adversarial.rs  bft_rules.rs  block_tests.rs  bridge_release_quorum.rs  bridge_solidity_compat.rs  bucket_addresses.rs  checkpoint.rs  checkpoint_chain_test.rs  checkpoint_cosigning.rs  checkpoint_integration.rs  checkpoint_tests.rs  crash_recovery.rs  cross_batch_equivocation.rs  crypto_correctness.rs  dag_bft_finality.rs  dag_structure.rs  dag_sync.rs  double_spend_prevention.rs  economics_audit.rs  edge_case_coverage.rs  edge_cases.rs  epoch_transition.rs  equivocation_evidence.rs  equivocation_gossip.rs  error_handling_tests.rs  fault_tolerance.rs  finality.rs  finality_scan.rs  genesis_hash_compute.rs  genesis_runtime_check.rs  governance.rs  governance_integration.rs  governance_tests.rs  multi_validator_progression.rs  name_registry.rs  name_registry_pockets.rs  (+29 more)
crates/ultradag-esp32/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
crates/ultradag-esp32/.cargo/: config.toml
crates/ultradag-esp32/examples/: led_blink.rs  minimal.rs
crates/ultradag-esp32/src/: client.rs  config.rs  display.rs  finality.rs  lib.rs  main.rs  sign.rs  storage.rs  wallet.rs  wifi.rs
crates/ultradag-network/: Cargo.toml
crates/ultradag-network/src/: bootstrap.rs  lib.rs  metrics.rs
crates/ultradag-network/src/node/: mod.rs  server.rs
crates/ultradag-network/src/peer/: connection.rs  mod.rs  noise.rs  registry.rs
crates/ultradag-network/src/protocol/: message.rs  mod.rs
crates/ultradag-network/tests/: adversarial_integration_tests.rs  fault_injection_basic_tests.rs  jepsen_tests.rs  network.rs  peer_connection_tests.rs  peer_registry_tests.rs  protocol_edge_cases_tests.rs  sync_integration_tests.rs
crates/ultradag-network/tests/fault_injection/: README.md  TEST_RESULTS.md  clock_skew.rs  crash_restart.rs  invariants.rs  message_chaos.rs  mod.rs  network_partition.rs
crates/ultradag-node/: Cargo.toml
crates/ultradag-node/src/: lib.rs  main.rs  metrics.rs  rate_limit.rs  resource_monitor.rs  rpc.rs  tui.rs  validator.rs
crates/ultradag-node/tests/: metrics_tests.rs  rate_limit_tests.rs  rpc_error_tests.rs  rpc_tests.rs
crates/ultradag-sim/: COVERAGE.md  Cargo.toml  E2E_COVERAGE.md  GOVERNANCE_COVERAGE.md  README.md
crates/ultradag-sim/src/: byzantine.rs  fuzz.rs  harness.rs  invariants.rs  lib.rs  network.rs  oracle.rs  properties.rs  txgen.rs  validator.rs
crates/ultradag-sim/src/p2p/: attacker.rs  cluster.rs  helpers.rs  mod.rs
crates/ultradag-sim/tests/: basic.rs  boundary_values.rs  bridge.rs  catchup.rs  checkpoint_sync_sim.rs  combined_attack.rs  corruption_recovery.rs  cross_feature.rs  delegation.rs  determinism.rs  e2e.rs  epoch.rs  equivocation.rs  exhaustive_properties.rs  finality_attack.rs  fuzz_adversarial.proptest-regressions  fuzz_adversarial.rs  fuzz_extended.rs  governance.rs  governance_attack.rs  governance_full.rs  long_running.rs  p2p_consensus.rs  p2p_flooding.rs  p2p_handshake.rs  p2p_malformed.rs  partition.rs  reorder.rs  reward_attack.rs  rpc_fuzz.rs  sdk_parity.rs  selective_equivocation.rs  staking.rs  stress.rs  tx_flooding.rs
dashboard/: .env.example  package-lock.json  package.json  playwright.config.ts  test-results.json  vite.config.ts
deploy_1772975798/: monitor.sh  setup.sh  (+1 more)
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  crypto.rs  error.rs  lib.rs  transactions.rs  types.rs
sdk/rust/tests/: client_test.rs  crypto_test.rs
(+918 files in other folders)
