[workspace]
members = [
    "crates/ultradag-coin",
    "crates/ultradag-network",
    "crates/ultradag-node",
    "sdk/rust",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/UltraDAGcom/core"

[workspace.dependencies]
ultradag-coin = { path = "crates/ultradag-coin" }
ultradag-network = { path = "crates/ultradag-network" }
blake3 = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
postcard = { version = "=1.1.3", features = ["alloc"] }
bitvec = "1"
redb = "2"
snow = "0.9"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
