[package]
name = "ultradag-coin"
description = "UDAG coin: Bitcoin-model tokenomics, DAG-BFT consensus, account ledger, block validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
bitvec = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
