[package]
name = "ultradag-coin"
description = "UDAG coin: Bitcoin-model tokenomics, DAG-BFT consensus, account ledger, block validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_bytes = "0.11"
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
bitvec = { workspace = true }
redb = { workspace = true }
bech32 = { workspace = true }

[features]
default = []
mainnet = []  # Enable mainnet guards (rejects test faucet seed, etc.)
simulator = []  # Disable timestamp validation for deterministic simulation

[dev-dependencies]
serde_json = "1"
tempfile = "3"
