[package]
name = "ultradag-esp32"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
ultradag-coin = { path = "../ultradag-coin", default-features = false }
ultradag-network = { path = "../ultradag-network", default-features = false }

# ESP32 specific
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"
esp32-nano = "0.1"

# Embedded compatible
embedded-hal = "1"
embedded-io = "0.6"
heapless = "0.8"
nb = "1.0"

# Serialization (no_std)
postcard = { version = "1.1", features = ["alloc"], default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

# Crypto (no_std compatible)
blake3 = { version = "1", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
sha2 = { version = "0.10", default-features = false }

# Utilities
heapless = "0.8"
critical-section = "1.1"

[features]
default = ["std"]
std = ["esp-idf-hal/std", "esp-idf-svc/std"]
no_std = []

[profile.dev]
partial = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
