[package]
name = "ultradag-esp32"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
# ESP32 specific
esp-idf-hal = { version = "0.44", features = ["embassy-sync"] }
esp-idf-svc = { version = "0.49", features = ["embassy-time-driver", "embassy-time-isr-queue"] }
esp-idf-sys = { version = "0.35", features = ["native"] }
embedded-hal = "1.0"
embedded-io = "0.6"

# Serialization
postcard = { version = "1.1", features = ["alloc"], default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Crypto (no_std compatible)
blake3 = { version = "1", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
sha2 = { version = "0.10", default-features = false }

# Utilities
heapless = "0.8"
critical-section = "1.1"
nb = "1.0"

# Embassy async runtime
embassy-executor = { version = "0.6", features = ["arch-xtensa"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }

[features]
default = ["std"]
std = ["esp-idf-hal/std", "esp-idf-svc/std"]
no_std = []

[profile.dev]
partial = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
# Use patched versions for ESP32 compatibility if needed
