[package]
name = "ultradag-network"
description = "P2P networking: peer discovery, gossip, block/tx propagation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ultradag-coin = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = "1"
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
hostname = "0.4"
snow = { workspace = true }

[features]
test-helpers = []
mainnet = ["ultradag-coin/mainnet"]  # Propagate mainnet feature to coin crate

[dev-dependencies]
chrono = "0.4"
futures = "0.3"
ultradag-network = { path = ".", features = ["test-helpers"] }
ultradag-coin = { path = "../ultradag-coin", features = ["unsafe-dag-insert"] }
