[package]
name = "ultradag-node"
description = "UltraDAG full node: P2P networking, DAG-BFT validation, HTTP RPC"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ultradag-node"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"

[dependencies]
ultradag-coin = { workspace = true }
ultradag-network = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
dashmap = "6.0"
parking_lot = "0.12"
