[package]
name = "ultradag-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
ultradag-coin = { path = "../ultradag-coin", features = ["simulator", "unsafe-dag-insert"] }
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json = "1"

[dev-dependencies]
proptest = "1"
