[package]
name = "ultradag-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lightweight HTTP client SDK for UltraDAG nodes"
repository = "https://github.com/ultradag/core"
keywords = ["ultradag", "cryptocurrency", "dag", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
thiserror = "2"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "macros"] }
